--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="La Panthère est une agence de webdesign basée à Lyon, qui aide les entreprises à devenir attractives et visibles sur Internet">
+    <meta name="description" content="La Panthère est une agence de webdesign basée à Lyon, qui aide les entreprises à devenir attractives et visibles sur Internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -31,16 +31,16 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<header class="header bloc bgc-white l-bloc " id="bloc-0">
+<header class="header bloc bgc-white l-bloc" id="bloc-0" role="banner">
 	<div class="container bloc-sm">
 		<div class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'agence de webdesign La Panthère (header)" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo complet de l'agence de webdesign La Panthère" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+			<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav" role="navigation">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
 						<a href="#bloc-2-services">Services</a>
@@ -61,14 +61,14 @@
 </header>
 <!-- bloc-0 END -->
 
-<main class="main">
+<main class="main" role="main">
 
 	<!-- bloc-1-presentation -->
-	<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+	<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" role="region">
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
 				<div class="col-sm-12">
-					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo de l'agence de webdesign La Panthère (section Présentation)" />
+					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo sans texte de l'agence de webdesign La Panthère" />
 					<h1 class="text-center hero-bloc-text tc-white ">
 						<span class="brand-name">La Panthère</span>
 						<br>
@@ -84,12 +84,12 @@
 	<!-- bloc-1-presentation END -->
 	
 	<!-- bloc-2-services -->
-	<section class="bloc bgc-white l-bloc" id="bloc-2-services">
+	<section class="bloc bgc-white l-bloc" id="bloc-2-services" role="region">
 		<div class="container bloc-md">
 			<div class="row">
-				<h2>Nos services</h2>
-				<p class="col-sm-12 text-center">
-					L'agence La Panthère est une agence de webdesign basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet
+				<h2 class="home-h2">Nos services</h2>
+				<p class="brand-services col-sm-12 text-center">
+					La Panthère est une agence de webdesign basée à Lyon, <br>qui aide les entreprises à devenir attractives et visibles sur Internet
 				</p>
 			</div>
 			<div class="row voffset-lg med-width-whitespace">
@@ -131,9 +131,9 @@
 				<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 					<figure class="client-quote">
 						<blockquote>
-							<p>"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidés à doubler nos ventes en ligne à Lyon."</p>
+							<p class="text-left">"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidés à doubler nos ventes en ligne à Lyon."</p>
 						</blockquote>
-						<figcaption>Maxime Guibard, PDG de À vos fourchettes</figcaption>
+						<figcaption class="text-right">Maxime Guibard, PDG de À vos fourchettes</figcaption>
 					</figure>
 				</div>
 			</div>
@@ -142,13 +142,13 @@
 	<!-- bloc-2-services END -->
 	
 	<!-- bloc-3-what-i-do -->
-	<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+	<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do" role="region">
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace black-background">
 				<div class="col-sm-12">
-					<h2>Notre mission</h2>
-					<p class="mg-md text-center tc-white">
-						Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
+					<h2 class="home-h2 home-h2--bg-dark">Notre mission</h2>
+					<p class="mission-important mg-md text-center white">
+						Nous souhaitons aider les entreprises de la région lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.<br>
 					</p>
 					<p class="text-center white">
 						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beaux et bien structurés, qui seront facilement trouvables sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
@@ -160,10 +160,10 @@
 	<!-- bloc-3-what-i-do END -->
 	
 	<!-- bloc-4-portfolio -->
-	<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+	<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio" role="region">
 		<div class="container bloc-lg">
 			<div class="row">
-				<h2 class="col-sm-12 text-center">Nos réalisations
+				<h2 class="home-h2 col-sm-12 text-center">Nos réalisations
 				</h2>
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
@@ -177,7 +177,7 @@
 					</p>
 				</article>
 				<article class="col-sm-6">
-					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" /></a>
 					<h3 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h3>
@@ -188,7 +188,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<article class="col-sm-6">
-					<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+					<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur"/></a>
 					<h3 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h3>
@@ -197,7 +197,7 @@
 					</p>
 				</article>
 				<article class="col-sm-6">
-					<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+					<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Conception d'un site pour une agence de mariage" /></a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h3>
@@ -211,10 +211,10 @@
 	<!-- bloc-4-portfolio END -->
 	
 	<!-- bloc-5-cta -->
-	<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+	<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta" role="region">
 		<div class="container bloc-lg">
 			<div class="row">
-				<h2 class="mg-md text-center tc-white">
+				<h2 class="home-h2 home-h2--bg-dark mg-md text-center">
 					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 				</h2>
 				<div class="col-sm-12 text-center">
@@ -232,12 +232,12 @@
 <!-- ScrollToTop Button END-->
 
 <!-- Footer - bloc-8 -->
-<footer class="footer bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<footer class="footer bloc bgc-atomic-tangerine d-bloc" id="bloc-8" role="contentinfo">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br>
+					La Panthère - Agence web basée à Lyon<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
