--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-    
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
@@ -31,25 +30,25 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<header class="header bloc bgc-white l-bloc" id="bloc-0" role="banner">
+<header class="header bloc bgc-white l-bloc" id="bloc-0">
 	<div class="container bloc-sm">
 		<div class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo complet de l'agence de webdesign La Panthère" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo complet de l'agence de webdesign La Panthère" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
-			<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav" role="navigation">
+			<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="#bloc-2-services">Services</a>
+						<a href="#services">Services</a>
 					</li>
 					<li>
-						<a href="#bloc-3-what-i-do">Mission</a>
+						<a href="#mission">Mission</a>
 					</li>
 					<li>
-						<a href="#bloc-4-portfolio">Réalisations</a>
+						<a href="#realisations">Réalisations</a>
 					</li>
 					<li>
 						<a href="contact.html">Contact &gt;</a>
@@ -61,14 +60,14 @@
 </header>
 <!-- bloc-0 END -->
 
-<main class="main" role="main">
+<main class="main">
 
 	<!-- bloc-1-presentation -->
-	<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero" role="region">
+	<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
 				<div class="col-sm-12">
-					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo sans texte de l'agence de webdesign La Panthère" />
+					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo sans texte de l'agence de webdesign La Panthère">
 					<h1 class="text-center hero-bloc-text tc-white ">
 						<span class="brand-name">La Panthère</span>
 						<br>
@@ -84,12 +83,12 @@
 	<!-- bloc-1-presentation END -->
 	
 	<!-- bloc-2-services -->
-	<section class="bloc bgc-white l-bloc" id="bloc-2-services" role="region">
+	<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 		<div class="container bloc-md">
 			<div class="row">
-				<h2 class="home-h2">Nos services</h2>
+				<h2 id="services" class="home-h2">Nos services</h2>
 				<p class="brand-services col-sm-12 text-center">
-					La Panthère est une agence de webdesign basée à Lyon, <br>qui aide les entreprises à devenir attractives et visibles sur Internet
+					La Panthère est une agence de webdesign basée à Lyon, <br>qui aide les entreprises à devenir attractives et visibles sur Internet.
 				</p>
 			</div>
 			<div class="row voffset-lg med-width-whitespace">
@@ -142,11 +141,11 @@
 	<!-- bloc-2-services END -->
 	
 	<!-- bloc-3-what-i-do -->
-	<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do" role="region">
+	<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace black-background">
 				<div class="col-sm-12">
-					<h2 class="home-h2 home-h2--bg-dark">Notre mission</h2>
+					<h2 id="mission" class="home-h2 home-h2--bg-dark">Notre mission</h2>
 					<p class="mission-important mg-md text-center white">
 						Nous souhaitons aider les entreprises de la région lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.<br>
 					</p>
@@ -160,15 +159,15 @@
 	<!-- bloc-3-what-i-do END -->
 	
 	<!-- bloc-4-portfolio -->
-	<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio" role="region">
+	<section class="portfolio bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 		<div class="container bloc-lg">
 			<div class="row">
-				<h2 class="home-h2 col-sm-12 text-center">Nos réalisations
+				<h2 id="realisations" class="home-h2 col-sm-12 text-center">Nos réalisations
 				</h2>
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
-				<article class="col-sm-6">
-					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Refonte d'un site web pour un journal lyonnais" class="img-responsive portfolio-thumb" /></a>
+				<article class="portfolio__card col-sm-6">
+					<a href="#" data-lightbox="img/1-refonte-site-journal-local_lightbox.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1-refonte-site-journal-local.jpg" alt="Refonte d'un site web pour un journal lyonnais" class="img-responsive portfolio-thumb"></a>
 					<h3 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
 					</h3>
@@ -176,8 +175,8 @@
 						Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 					</p>
 				</article>
-				<article class="col-sm-6">
-					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" /></a>
+				<article class="portfolio__card col-sm-6">
+					<a href="#" data-lightbox="img/2-creation-site-photographe_lightbox.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2-creation-site-photographe.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes"></a>
 					<h3 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h3>
@@ -187,8 +186,8 @@
 				</article>
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
-				<article class="col-sm-6">
-					<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur"/></a>
+				<article class="portfolio__card col-sm-6">
+					<a href="#" data-lightbox="img/3-creation-site-web-voyageur.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3-creation-site-web-voyageur.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur"></a>
 					<h3 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h3>
@@ -196,8 +195,8 @@
 						Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 					</p>
 				</article>
-				<article class="col-sm-6">
-					<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Conception d'un site pour une agence de mariage" /></a>
+				<article class="portfolio__card col-sm-6">
+					<a href="#" data-lightbox="img/4-conception-site-agence-mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4-conception-site-agence-mariage.jpg" class="img-responsive portfolio-thumb" alt="Conception d'un site pour une agence de mariage"></a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h3>
@@ -211,7 +210,7 @@
 	<!-- bloc-4-portfolio END -->
 	
 	<!-- bloc-5-cta -->
-	<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta" role="region">
+	<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 		<div class="container bloc-lg">
 			<div class="row">
 				<h2 class="home-h2 home-h2--bg-dark mg-md text-center">
@@ -232,7 +231,7 @@
 <!-- ScrollToTop Button END-->
 
 <!-- Footer - bloc-8 -->
-<footer class="footer bloc bgc-atomic-tangerine d-bloc" id="bloc-8" role="contentinfo">
+<footer class="footer bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
