--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<article class="portfolio__card col-sm-6">
-					<a href="#" data-lightbox="img/1-refonte-site-journal-local_lightbox.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1-refonte-site-journal-local.jpg" alt="Refonte d'un site web pour un journal lyonnais" class="img-responsive portfolio-thumb"></a>
+					<a href="#" data-lightbox="img/1-refonte-site-journal-local_lightbox.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1-refonte-site-journal-local.webp" alt="Refonte d'un site web pour un journal lyonnais" class="img-responsive portfolio-thumb"></a>
 					<h3 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
 					</h3>
@@ -176,7 +176,7 @@
 					</p>
 				</article>
 				<article class="portfolio__card col-sm-6">
-					<a href="#" data-lightbox="img/2-creation-site-photographe_lightbox.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2-creation-site-photographe.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes"></a>
+					<a href="#" data-lightbox="img/2-creation-site-photographe_lightbox.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2-creation-site-photographe.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes"></a>
 					<h3 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h3>
@@ -187,7 +187,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<article class="portfolio__card col-sm-6">
-					<a href="#" data-lightbox="img/3-creation-site-web-voyageur.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3-creation-site-web-voyageur.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur"></a>
+					<a href="#" data-lightbox="img/3-creation-site-web-voyageur.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3-creation-site-web-voyageur.webp" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur"></a>
 					<h3 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h3>
@@ -196,7 +196,7 @@
 					</p>
 				</article>
 				<article class="portfolio__card col-sm-6">
-					<a href="#" data-lightbox="img/4-conception-site-agence-mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4-conception-site-agence-mariage.jpg" class="img-responsive portfolio-thumb" alt="Conception d'un site pour une agence de mariage"></a>
+					<a href="#" data-lightbox="img/4-conception-site-agence-mariage.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4-conception-site-agence-mariage.webp" class="img-responsive portfolio-thumb" alt="Conception d'un site pour une agence de mariage"></a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h3>
