Revert "aria-label sur les <a> + async sur les <script>"
This reverts commit 5815d7827330910635f828175ff89e738fdd626e.

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
-	<script async src="./js/jquery-2.1.0.min.js"></script>
-	<script async src="./js/bootstrap.min.js"></script>
-	<script async src="./js/blocs.min.js"></script>
-	<script async src="./js/jquery.touchSwipe.min.js" defer></script>
-	<script async src="./js/gmaps.min.js"></script>
+	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+	<script src="./js/blocs.min.js"></script>
+	<script src="./js/jquery.touchSwipe.min.js" defer></script>
+	<script src="./js/gmaps.min.js"></script>
 
     <title>La Panthère - Agence de webdesign à Lyon</title>
 
@@ -34,7 +34,7 @@
 	<div class="container bloc-sm">
 		<div class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html" aria-label="Recharger la page d'accueil"><img src="img/agence-la-panthere-monochrome.svg" alt="logo complet de l'agence de webdesign La Panthère" height="40"></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo complet de l'agence de webdesign La Panthère" height="40"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -42,16 +42,16 @@
 			<nav class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="#services" aria-label="Aller à la section 'Nos services'">Services</a>
+						<a href="#services">Services</a>
 					</li>
 					<li>
-						<a href="#mission" aria-label="Aller à la section 'Notre mission'">Mission</a>
+						<a href="#mission">Mission</a>
 					</li>
 					<li>
-						<a href="#realisations" aria-label="Aller à la section 'Nos réalisations'">Réalisations</a>
+						<a href="#realisations">Réalisations</a>
 					</li>
 					<li>
-						<a href="contact.html" aria-label="Aller à la page Contact">Contact &gt;</a>
+						<a href="contact.html">Contact &gt;</a>
 					</li>
 				</ul>
 			</nav>
@@ -74,7 +74,7 @@
 						<span class="brand-description">Agence de webdesign à Lyon</span>
 					</h1>
 					<div class="text-center">
-						<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" aria-label="Aller à la page Contact">Contact</a>
+						<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 					</div>
 				</div>
 			</div>
@@ -150,9 +150,7 @@
 						Nous souhaitons aider les entreprises de la région lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.<br>
 					</p>
 					<p class="text-center white">
-						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beaux et bien structurés, qui seront facilement trouvables sur les moteurs de recherche. 
-						<br><br>
-						<a class="ltc-white bold-link" href="contact.html" aria-label="Aller à la page Contact">Contactez notre équipe</a><br>
+						Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locales, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beaux et bien structurés, qui seront facilement trouvables sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 					</p>
 				</div>
 			</div>
@@ -169,9 +167,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<article class="portfolio__card col-sm-6">
-					<a href="#" data-lightbox="img/1-refonte-site-journal-local_lightbox.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb" aria-label="Afficher l'image">
-						<img src="img/1-refonte-site-journal-local.webp" alt="Refonte d'un site web pour un journal lyonnais" class="img-responsive portfolio-thumb">
-					</a>
+					<a href="#" data-lightbox="img/1-refonte-site-journal-local_lightbox.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1-refonte-site-journal-local.webp" alt="Refonte d'un site web pour un journal lyonnais" class="img-responsive portfolio-thumb"></a>
 					<h3 class="mg-md text-center">
 						Refonte d'un site web pour un journal local
 					</h3>
@@ -180,9 +176,7 @@
 					</p>
 				</article>
 				<article class="portfolio__card col-sm-6">
-					<a href="#" data-lightbox="img/2-creation-site-photographe_lightbox.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"  aria-label="Afficher l'image">
-						<img src="img/2-creation-site-photographe.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes">
-					</a>
+					<a href="#" data-lightbox="img/2-creation-site-photographe_lightbox.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2-creation-site-photographe.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes"></a>
 					<h3 class="mg-md text-center">
 						Création d'un site web pour photographes
 					</h3>
@@ -193,9 +187,7 @@
 			</div>
 			<div class="row tight-width-whitespace portfolio-row">
 				<article class="portfolio__card col-sm-6">
-					<a href="#" data-lightbox="img/3-creation-site-web-voyageur.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb" aria-label="Afficher l'image">
-						<img src="img/3-creation-site-web-voyageur.webp" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur">
-					</a>
+					<a href="#" data-lightbox="img/3-creation-site-web-voyageur.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3-creation-site-web-voyageur.webp" class="img-responsive portfolio-thumb" alt="Création d'un site internet pour un voyageur"></a>
 					<h3 class="mg-md text-center">
 						Création d'un site internet pour un voyageur
 					</h3>
@@ -204,9 +196,7 @@
 					</p>
 				</article>
 				<article class="portfolio__card col-sm-6">
-					<a href="#" data-lightbox="img/4-conception-site-agence-mariage.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb" aria-label="Afficher l'image">
-						<img src="img/4-conception-site-agence-mariage.webp" class="img-responsive portfolio-thumb" alt="Conception d'un site pour une agence de mariage">
-					</a>
+					<a href="#" data-lightbox="img/4-conception-site-agence-mariage.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4-conception-site-agence-mariage.webp" class="img-responsive portfolio-thumb" alt="Conception d'un site pour une agence de mariage"></a>
 					<h3 class="mg-md text-center">
 						Conception d'un site pour une agence de mariage
 					</h3>
@@ -227,7 +217,7 @@
 					Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 				</h2>
 				<div class="col-sm-12 text-center">
-					<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero" aria-label="Aller à la page Contact">Contact</a>
+					<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
@@ -251,22 +241,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" aria-label="Visiter la page Twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" aria-label="Visiter la page Facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" aria-label="Visiter la page Dribble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html" aria-label="Visiter la page Instagram"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
