Modif taille logo accueil

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<div class="container bloc-lg">
 			<div class="row tight-width-whitespace">
 				<div class="col-sm-12">
-					<img src="img/logo.png" class="center-block image-resize-mode" alt="Logo sans texte de l'agence de webdesign La Panthère">
+					<img src="img/logo.png" width="100px" class="center-block image-resize-mode" alt="Logo sans texte de l'agence de webdesign La Panthère">
 					<h1 class="text-center hero-bloc-text tc-white ">
 						<span class="brand-name">La Panthère</span>
 						<br>
