--- a/index.html
+++ b/index.html
@@ -251,22 +251,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md" aria-label="Se rendre sur la page Twitter de La Panthère"></span></a>
+							<a class="social" href="index.html" aria-label="Se rendre sur la page Twitter de La Panthère"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md" aria-label="Se rendre sur la page Facebook de La Panthère"></span></a>
+							<a class="social" href="index.html" aria-label="Se rendre sur la page Facebook de La Panthère"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md" aria-label="Se rendre sur la page Dribble de La Panthère"></span></a>
+							<a class="social" href="index.html" aria-label="Se rendre sur la page Dribble de La Panthère"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md" aria-label="Se rendre sur la page Instagram de La Panthère"></span></a>
+							<a class="social" href="index.html" aria-label="Se rendre sur la page Instagram de La Panthère"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
