Mise à jour formulaire de contact (messages succès et erreur)

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 		<div class="container bloc-lg">
 			<div class="row">
 				<div class="col-sm-6">
-					<form id="form_1" class="contact-form" novalidate success-msg="Votre message a été envoyé." fail-msg="Désolé, il semble que le serveur mail ne réponde pas.">
+					<form id="form_1" class="contact-form" novalidate data-success-msg="Votre message a été envoyé." data-fail-msg="Désolé, il semble que le serveur mail ne réponde pas.">
 						<div class="form-group">
 							<label for="name">
 								Nom *
